--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=8088
+server.port=1202
 mybatis.type-aliases-package=com.ncu.chygienicjavaweb
-spring.datasource.url=jdbc:mysql://nogra.cn:3306/data?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.url=jdbc:mysql://nogra.cn:3306/java-web?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
 spring.datasource.username=remote
 spring.datasource.password=NCUcs19!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
