:fire: 添加配置打印sql语句，解决插入不了json的问题

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:mysql://nogra.cn:3306/test?serverTimezone=UTC&useUnic
 spring.datasource.username=remote
 spring.datasource.password=NCUcs19!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
